--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "next": "14.0.4",
+    "next": "^16.0.3",
     "postcss": "^8",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "tailwindcss": "^3.3.0",
     "typescript": "5.3.3"
   }
